knowledge_base/knowledge/v15/capl/structured/MOST/mostSetSyncSpdifLock.md
# mostSetSyncSpdifLock

> Category: `MOST` | Type: `function`

## Syntax

```c
long mostSetSyncSpdifLock(long channel, long mode);
```

## Description

The function locks the internal S/PDIF timing generator on the S/PDIF input data stream.

Unlock the timing generator if frame synchronization is not possible due to a closed loop configuration. A closed loop means that the S/PDIF input signal is locked through an external S/PDIF device on the S/PDIF output of the bus interface.

## Parameters

| Name | Description |
|---|---|
| channel | Channel of the connected interface |
| 0 | Separates the timing generator from the S/PDIF input data stream. |
| 1 | Locks the timing generator on the S/PDIF input data stream. |

## Return Values

See error codes

## Example

Use Cases:

External S/PDIF source device connected to the S/PDIF In connector of the VN2610

External S/PDIF source and sink device connected to the S/PDIF In and Out connector of the VN2610

This is not the tyical use case but in case of synchronization problems (mentioned above) the timing generator has to be separated from the S/PDIF input data stream.

More S/PDIF examples see CANoe online help MOST Access to Digital Audio Channels (S/PDIF In and Out).

```c
on key 's'
{
  long channel = 1;
  mostSetSyncSpdifLock( channel, 0 );
}
```

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | 6.0 | 6.0 | — | — | — | —✔ |
| Restricted To | MOST25 | MOST25 | — | — | — | —✔ |
| CANalyzer Measurement Setup (Transmit Branch) | ✔ | N/A | N/A | N/A | N/A | — |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | —✔ |
| CANoe Simulation Setup | N/A | ✔ | — | — | N/A | —✔ |
| CANoe System and Communication Setup | N/A | ✔ | — | — | — | —✔ |
| CANoe Test Setup for Test Modules | N/A | ✔ | — | — | N/A | —✔ |
| CANoe Test Setup for Test Units | N/A | ✔ | — | — | — | —✔ |
| 32-Bit | ✔ | ✔ | — | N/A | — | —✔ |
| 64-Bit | ✔ | ✔ | — | — | — | —✔ |
